# fork-chat

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
.kiro/specs/branching-chat-app/: design.md  requirements.md  tasks.md
backend/: .coverage  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/src/: database.py  init_db.py
backend/src/models/: __init__.py  attached_file.py  conversation.py  message.py
backend/src/repositories/: __init__.py  base.py  conversation_repository.py  file_repository.py  message_repository.py
backend/tests/: conftest.py  test_repositories.py
docs/: api_design.md  architecture.md  coding_guide.md  database.md  development_guide.md  requirements.md
frontend/: .eslintrc.json  .prettierignore  Dockerfile  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
