[project]
name = "fork-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openhands-ai>=0.47.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D"] # Error, Flake8, Warnings, Isort, Naming, Docstrings
ignore = ["D100", "D104", "D105", "D107"] # Missing docstrings for modules, packages, functions, __init__
