[project]
name = "branching-chat-backend"
version = "0.1.0"
description = "Backend for branching chat application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "google-generativeai==0.3.2",
    "websockets==12.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "ruff",
]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
